--- a/_scss/_subsection.scss
+++ b/_scss/_subsection.scss
@@ -1,6 +1,7 @@
 $sections:
   (getting-started, jquery-waypoints, creating-adapters, debugging-waypoints),
-  (sticky-elements, infinite-scroll, inview);
+  (sticky-elements, infinite-scroll, inview),
+  (context, context-destroy, context-find-by-element, context-option, context-refresh, continuous-option, destroy, destroy-all, disable, enable, enabled-option, first, group, group-option, horizontal-option, last, next, offset-option, previous, refresh-all, trigger-once-option, viewport-height, viewport-width, waypoint);
 
 .subsection-nav {
   margin:0;
